--- a/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
@@ -1,15 +1,100 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonsterDetailPage"
              Title="{Binding Title}">
-
-
+             
     <ContentPage.ToolbarItems>
-
+        <ToolbarItem Text="Edit" Clicked="Edit_Clicked" />
+        <ToolbarItem Text="Delete" Clicked="Delete_Clicked" />
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
     </ContentPage.ToolbarItems>
 
-    <StackLayout Spacing="20" Padding="15">
+    <ScrollView>
+        <StackLayout 
+            x:Name="DetailsRoot"
+            Orientation="Vertical"
+            Spacing="20"
+            Padding="15">
 
-    </StackLayout>
+            <Label Text="Monster Detail Page" FontSize="Medium" />
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Name : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Type : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Type.name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+            
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Difficulty : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Type.name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Max Health : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.MaxHealth}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Attack : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Attack}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Defense : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Defense}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Speed : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Speed}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
