--- a/Crawl/Crawl/Views/Monsters/MonsterEditPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterEditPage.xaml
@@ -1,17 +1,116 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonsterEditPage"		     
              Title="{Binding Title}">
     
     <ContentPage.ToolbarItems>
-
+        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout Spacing="20" Padding="15">
+        <ScrollView>
+            <StackLayout Spacing="20" Padding="15">
+                <Grid
+                    RowSpacing="1"
+                    ColumnSpacing="2"
+                    VerticalOptions="Center">
 
-        </StackLayout>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackLayout Grid.Row="0" Grid.Column="0">
+                        <Label 
+                            Text="Name" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    <StackLayout Grid.Row="0" Grid.Column="1">
+                        <Entry 
+                            Text="{Binding Data.Name}" 
+                            FontSize="Small" 
+                            HorizontalOptions="FillAndExpand"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+
+                    <!-- Health Attribute -->
+                    <StackLayout Grid.Row="1" Grid.Column="0">
+                        <Label 
+                            Text="Health:" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start"
+                            FontAttributes="Bold"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    <StackLayout Grid.Row="1" Grid.Column="1">
+                        <Label Text="{Binding Data.Attribute.MaxHealth}" 
+                        FontSize="Medium" 
+                        HorizontalOptions="Center"/>
+                    </StackLayout>
+
+                    <!-- Attack Attribute -->
+                    <StackLayout Grid.Row="2" Grid.Column="0">
+                        <Label 
+                            Text="Attack:" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start"
+                            FontAttributes="Bold"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    <StackLayout Grid.Row="2" Grid.Column="1">
+                        <Label Text="{Binding Data.Attribute.Attack}" 
+                        FontSize="Medium" 
+                        HorizontalOptions="Center"/>
+                    </StackLayout>
+
+                    <!-- Defense Attribute -->
+                    <StackLayout Grid.Row="3" Grid.Column="0">
+                        <Label 
+                            Text="Defense:" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start"
+                            FontAttributes="Bold"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    <StackLayout Grid.Row="3" Grid.Column="1">
+                        <Label Text="{Binding Data.Attribute.Defense}" 
+                        FontSize="Medium" 
+                        HorizontalOptions="Center"/>
+                    </StackLayout>
+
+                    <!-- Speed Attribute -->
+                    <StackLayout Grid.Row="4" Grid.Column="0">
+                        <Label 
+                            Text="Speed:" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start"
+                            FontAttributes="Bold"
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    <StackLayout Grid.Row="4" Grid.Column="1">
+                        <Label Text="{Binding Data.Attribute.Speed}" 
+                        FontSize="Medium" 
+                        HorizontalOptions="Center"/>
+                    </StackLayout>
+
+                    <!-- Reroll Base Attributes -->
+                    <StackLayout Grid.Row="5" Grid.Column="1">
+                        <Button Text ="ReRoll"
+                            BackgroundColor = "Accent"
+                            BorderRadius = "10"
+                            BorderWidth = "2"
+                            BorderColor = "Black"
+                            Clicked = "ReRollButton_Clicked"
+                            HorizontalOptions = "Center"/>      
+                    </StackLayout>
+                </Grid>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
-    
 </ContentPage>
