--- a/Crawl/Crawl/Views/Monsters/MonsterDeletePage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDeletePage.xaml
@@ -1,15 +1,102 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonsterDeletePage"
             Title="{Binding Title}">
+           
+    <ScrollView>
+        <StackLayout 
+            x:Name="DetailsRoot"
+            Orientation="Vertical"
+            Spacing="20"
+            Padding="15">
 
+            <Label Text="Delete Monster?" FontSize="Medium" />
 
-    <ContentPage.ToolbarItems>
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Name : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
 
-    </ContentPage.ToolbarItems>
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Type : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Class.name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
 
-    <StackLayout Spacing="20" Padding="15">
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Difficulty : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Level}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+            
+            <Label Text="Stats:" FontSize="Medium" FontAttributes="Bold" />
+            
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Attack : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Attack}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
 
-    </StackLayout>
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Defense : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Defense}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Speed : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.Speed}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+                <Label Text="Max Health : " 
+                   FontSize="Small" 
+                   HorizontalOptions="Start"/>
+                <Label Text="{Binding Data.Attribute.MaxHealth}" 
+                    FontSize="Small" 
+                    HorizontalOptions="Center"/>
+            </StackLayout>
+            
+            <StackLayout Grid.Row="2" Grid.Column="1">
+            <Button Text="Yes, Delete"
+                    HorizontalOptions="Center"
+                    Clicked="Delete_Clicked"/>
+            </StackLayout>  
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
