added monster types into new monster page

--- a/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
@@ -36,7 +36,7 @@
                 <Label Text="Type : " 
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Type.name}" 
+				<Label Text="{Binding Data.MonsterTypeName}" 
                     FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
