--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.CharactersPage"
               Title="{Binding Title}"
-             x:Name="BrowseCharactersPage">
+             x:Name="BrowseMonstersPage">
   <ContentPage.ToolbarItems>
     <ToolbarItem Text="Add" Clicked="AddCharacter_Clicked" />
   </ContentPage.ToolbarItems>
