--- a/Crawl/Crawl/Views/Monsters/MonstersPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonstersPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonstersPage"
               Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+             x:Name="BrowseMonsterPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Clicked="AddMonster_Clicked" />
     </ContentPage.ToolbarItems>
