Added OnDifficultyPickerSelectedIndexChanged to MonsterNew

--- a/Crawl/Crawl/Views/Characters/CharacterEditPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterEditPage.xaml
@@ -25,6 +25,7 @@
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
 
+					<!-- Name Attribute -->
                     <StackLayout Grid.Row="0" Grid.Column="0">
                         <Label 
                             Text="Name" 
