--- a/Crawl/Crawl/Views/Monsters/MonsterNewPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterNewPage.xaml
@@ -57,23 +57,17 @@
                 </StackLayout>
                 
                 <StackLayout>
-                    <Picker Title="Difficulty"
+					<Picker Title="Difficulty"
                     VerticalOptions="CenterAndExpand"
                     Margin="30, 5"
+					ItemsSource="{Binding Difficulties}"
                     SelectedIndexChanged="OnDifficultyPickerSelectedIndexChanged">
-                        <Picker.Items>
-                            <x:String>1</x:String>
-                            <x:String>2</x:String>
-                            <x:String>3</x:String>
-                            <x:String>4</x:String>
-                            <x:String>5</x:String>
-                        </Picker.Items>
-                    </Picker>
+					</Picker>
                 </StackLayout>
                 
                 <!-- Save Button -->
                 <StackLayout>
-                <Button Text="Birth Creature of the Deep"
+                <Button Text="Birth Beast of the Deep"
                         HorizontalOptions="Center"
                         Clicked="Save_Clicked" 
                          />
