--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -47,7 +47,7 @@
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
                        FontSize="16" />
-                    <Label Text="{Binding Class.name}"
+                    <Label Text="{Binding Class}"
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
                        FontSize="16" />
