--- a/Crawl/Crawl/Views/Monsters/MonsterNewPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterNewPage.xaml
@@ -8,6 +8,7 @@
         <ScrollView>
             <StackLayout Spacing="20" Padding="15">
                 <Label Text="MONSTER CREATION" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+				
                 <!-- Name Entry -->
                 <StackLayout>
                     <Label 
@@ -24,7 +25,7 @@
                         VerticalOptions="Center"/>
                 </StackLayout>
                 
-                <!-- Type -->
+                <!-- Type entry -->
                 <StackLayout>
                     <Label 
                         Text="Type: " 
@@ -37,7 +38,7 @@
                     <Picker Title="Type"
                     VerticalOptions="CenterAndExpand"
                     Margin="30, 5"
-                    SelectedIndexChanged="OnPickerSelectedIndexChanged">
+                    SelectedIndexChanged="OnTypePickerSelectedIndexChanged">
                         <Picker.Items>
                             <x:String>Giant Squid</x:String>
                             <x:String>Giant Starfish</x:String>
@@ -46,7 +47,7 @@
                     </Picker>
                 </StackLayout>
                 
-                <!-- Difficulty -->
+                <!-- Difficulty entry -->
                 <StackLayout>
                     <Label 
                         Text="Difficulty: " 
@@ -56,23 +57,17 @@
                 </StackLayout>
                 
                 <StackLayout>
-                    <Picker Title="Difficulty"
+					<Picker Title="Difficulty"
                     VerticalOptions="CenterAndExpand"
                     Margin="30, 5"
-                    SelectedIndexChanged="OnPickerSelectedIndexChanged">
-                        <Picker.Items>
-                            <x:String>1</x:String>
-                            <x:String>2</x:String>
-                            <x:String>3</x:String>
-                            <x:String>4</x:String>
-                            <x:String>5</x:String>
-                        </Picker.Items>
-                    </Picker>
+					ItemsSource="{Binding Difficulties}"
+                    SelectedIndexChanged="OnDifficultyPickerSelectedIndexChanged">
+					</Picker>
                 </StackLayout>
                 
                 <!-- Save Button -->
                 <StackLayout>
-                <Button Text="Birth Creature of the Deep"
+                <Button Text="Birth Beast of the Deep"
                         HorizontalOptions="Center"
                         Clicked="Save_Clicked" 
                          />
