--- a/Crawl/Crawl/Views/Items/ItemDetailPage.xaml
+++ b/Crawl/Crawl/Views/Items/ItemDetailPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ItemDetailPage"
@@ -17,8 +17,6 @@
             Orientation="Vertical"
             Spacing="20"
             Padding="15">
-
-            <Label Text="Items Detail Page" FontSize="Medium" />
 
             <Image Source="{Binding Data.ImageURI}"
                 WidthRequest="150"
