--- a/Crawl/Crawl/Views/MainPage.xaml
+++ b/Crawl/Crawl/Views/MainPage.xaml
@@ -12,7 +12,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:AboutPage />
+                <views:HomePage />
             </x:Arguments>
         </NavigationPage>
         
