Added comments to MonsterDetailPage

--- a/Crawl/Crawl/Views/Monsters/MonsterDeletePage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDeletePage.xaml
@@ -30,7 +30,7 @@
                 <Label Text="Type : " 
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Class.name}" 
+                <Label Text="{Binding Data.type}" 
                     FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
