--- a/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
+++ b/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.Battle.AutoBattlePage">
@@ -8,28 +8,9 @@
             HorizontalOptions="Center" 
             VerticalOptions="Start"
             Orientation="Vertical">
-
-                <Image 
-                Source="d20.png" 
-                VerticalOptions="Center" 
-                HeightRequest="150"
-                HorizontalOptions="Fill"/>
-
-                <Label 
-                FontSize="Large"
-                Text="Class Dungeon"
-                VerticalOptions="Center" 
-                HorizontalOptions="CenterAndExpand" />
-
-                <Label Text="Battle Modes"
+                <Label Text="AutoBattle"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-                
-                <Button Text="Auto Battle"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" 
-                Clicked="AutoBattleButton_Command"/>
-
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
