--- a/Crawl/Crawl/Views/Scores/ScoresPage.xaml
+++ b/Crawl/Crawl/Views/Scores/ScoresPage.xaml
@@ -1,14 +1,53 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ScoresPage"
               Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+             x:Name="BrowseScoresPage">
     <ContentPage.ToolbarItems>
-
+        <ToolbarItem Text="Add" Clicked="AddScore_Clicked" />
     </ContentPage.ToolbarItems>
     
-      <ContentPage.Content>
-        
+    <ContentPage.Content>
+        <StackLayout>
+            <ListView x:Name="ScoresListView"
+              ItemsSource="{Binding Dataset}"
+              VerticalOptions="FillAndExpand"
+               HasUnevenRows="true"
+               RefreshCommand="{Binding LoadItemsCommand}"
+               IsPullToRefreshEnabled="true"
+               IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+               CachingStrategy="RecycleElement"
+               ItemSelected="OnItemSelected">
+            <ListView.ItemTemplate>
+              <DataTemplate>
+                <ViewCell>
+                  <StackLayout Padding="10"
+                               Orientation="Horizontal"
+                               VerticalOptions="Start"
+                               HorizontalOptions="Start">
+
+                    <StackLayout>
+                      <StackLayout Orientation="Horizontal">
+                          
+                        <!-- Name Attribute -->
+                        <Label Text="Date:"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontSize="13" />
+                        <Label Text="{Binding GameDate}"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontAttributes="Bold"
+                           FontSize="13" />
+                         
+                        </StackLayout>
+                    </StackLayout>
+                  </StackLayout>
+                </ViewCell>
+              </DataTemplate>
+            </ListView.ItemTemplate>
+          </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
