--- a/Crawl/Crawl/Views/Scores/ScoreNewPage.xaml
+++ b/Crawl/Crawl/Views/Scores/ScoreNewPage.xaml
@@ -9,6 +9,45 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        
+        <ScrollView>
+            <StackLayout Spacing="20" Padding="15">
+                <Label Text="Score Create Page" FontSize="Small" />
+
+                <Label Text="Name" FontSize="Medium" />
+                <Entry Text="{Binding Data.Name}" FontSize="Small" />
+
+                <Label Text="Score:" FontSize="Medium" />
+                <Entry Text="{Binding Data.ScoreTotal}" FontSize="Small"/>
+
+                <Label Text="Game Date:" FontSize="Medium" />
+                <Entry Text="{Binding Data.GameDate}" FontSize="Small"/>
+
+                <Label Text="AutoBattle:" FontSize="Medium" />
+                <Entry Text="{Binding Data.AutoBattle}" FontSize="Small"/>
+
+                <Label Text="Slain Monster Count:" FontSize="Medium" />
+                <Entry Text="{Binding Data.MonsterSlainNumber}" FontSize="Small"/>
+
+                <Label Text="Total Experience Gained:" FontSize="Medium" />
+                <Entry Text="{Binding Data.ExperienceGainedTotal}" FontSize="Small"/>
+
+                <Label Text="Characters at Death:" FontSize="Medium" />
+                <Entry Text="{Binding Data.CharacterAtDeathList}" FontSize="Small"/>
+
+                <Label Text="Monsters Killed:" FontSize="Medium" />
+                <Entry Text="{Binding Data.MonstersKilledList}" FontSize="Small"/>
+
+                <Label Text="Items Dropped:" FontSize="Medium" />
+                <Entry Text="{Binding Data.ItemsDroppedList}" FontSize="Small"/>
+                
+                <!-- Save Button -->
+                <StackLayout>
+                <Button Text="Save New Score"
+                        HorizontalOptions="Center"
+                        Clicked="Save_Clicked" 
+                         />
+                </StackLayout>  
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
