--- a/Crawl/Crawl/Views/AboutPage.xaml
+++ b/Crawl/Crawl/Views/AboutPage.xaml
@@ -101,7 +101,7 @@
                                     TextColor="Black" />
                             </StackLayout>
 
-
+                            <!--
                             <StackLayout
                                 HorizontalOptions="FillAndExpand"
                                 Orientation="Horizontal">
@@ -123,13 +123,13 @@
                                     Clicked="GetItemsPost_Command" 
                                     HorizontalOptions="EndAndExpand"
                                     TextColor="Black" />
-                            </StackLayout>
+                            </StackLayout> -->
                         
                     </StackLayout>
                 </StackLayout>
 
 
-
+                <!--
                 <StackLayout 
                     Margin="0,50,0,0"
                         HorizontalOptions="CenterAndExpand"
@@ -194,25 +194,7 @@
                             IsToggled="False"/>
                         </StackLayout>
                     </StackLayout>
-                </StackLayout>
-
-                <!--// Example of a Grid Layout-->
-                <Grid
-                    RowSpacing="1"
-                    ColumnSpacing="2">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto" />
-                    </Grid.ColumnDefinitions>
-                    <Label Text="Data Version" Grid.Row="0" Grid.Column="0" />
-                    <Label Text="1" Grid.Row="0" Grid.Column="1" />
-                    <Label Text="Code Version" Grid.Row="1" Grid.Column="0" />
-                    <Label Text="2" Grid.Row="1" Grid.Column="1" />
-                </Grid>
+                </StackLayout> -->
                 </StackLayout>
             </StackLayout>
     </ScrollView>
